--- a/index.html
+++ b/index.html
@@ -21,12 +21,60 @@
                 <nav class="navegacion">
                     <a href="nosotros.html" class="navegacion__enlace">Nosotros</a><a href="cursos.html" class="navegacion__enlace">Cursos</a><a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
-            </div>
-        </div>
+            </div> <!-- .barra -->
+        </div> <!-- .contenedor -->
 
 
-        <div class="header__texto"><h2 class="no-margin">Blog de café con consejos y cursos</h2>
-        <a class="no-margin">Aprende de los expertos con las mejores recetas y consejos</a></div>
-    </header>
+        <div class="header__texto">
+            <h2 class="no-margin">Blog de café con consejos y cursos</h2>
+            <a class="no-margin">Aprende de los expertos con las mejores recetas y consejos</a>
+        </div> <!-- .header__texto -->
+    </header> <!-- .header -->
+    
+    <div class="contenedor contenido-principal">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog1.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de Grano de Café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias quos sapiente sequi, autem corrupti rerum ex obcaecati impedit assumenda magni vero reiciendis at reprehenderit praesentium alias, quod ad possimus.</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article> <!-- .entrada -->
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog2.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">3 Deliciosas Recetas de Café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias quos sapiente sequi, autem corrupti rerum ex obcaecati impedit assumenda magni vero reiciendis at reprehenderit praesentium alias, quod ad possimus.</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article> <!-- .entrada -->
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog3.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Beneficios del Café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestias quos sapiente sequi, autem corrupti rerum ex obcaecati impedit assumenda magni vero reiciendis at reprehenderit praesentium alias, quod ad possimus.</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article> <!-- .entrada -->
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros Cursos y Talleres</h3>
+        </aside>
+    </div>
+
 </body>
 </html>
