Se optimiza y añaden los elementos de html necesarios para las páginas de: - index.html. - entrada.html. - contacto.html. - cursos.html - nosotros.html

--- a/entrada.html
+++ b/entrada.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
     <header class="header">
+
         <div class="contenedor">
             <div class="barra">
                 <a class="logo" href="index.html">
@@ -19,30 +19,29 @@
                 </a>
 
                 <nav class="navegacion">
-                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a><a href="cursos.html" class="navegacion__enlace">Cursos</a><a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
-            </div> <!-- .barra -->
-        </div> <!-- .contenedor -->
-
+            </div>
+        </div>
 
         <div class="header__texto">
             <h2 class="no-margin">Blog de café con consejos y cursos</h2>
-            <a class="no-margin">Aprende de los expertos con las mejores recetas y consejos</a>
-        </div> <!-- .header__texto -->
-    </header> <!-- .header -->
-    
+            <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
+        </div>
+    </header>
+
     <main class="contenedor">
-       <h3 class="centrar-texto">Nuestros Próximos Cursos y Talleres</h3>
+        <h3 class="centrar-texto">Sobre Nosotros</h3>
 
-       <img src="img/blog1.jpg" alt="Imagen del blog">
+        <img src="img/blog1.jpg" alt="imagen del blog">
 
-       <p> Praesent posuere pharetra velit, vel venenatis velit fringilla et. Maecenas malesuada luctus ante et ultricies. Praesent at orci nulla. Maecenas ac bibendum ante. Proin lacinia ligula nec ornare pulvinar. Duis vulputate libero et massa egestas, eu vehicula nulla fermentum. Pellentesque pretium metus quis urna vestibulum, id tristique mi fringilla. Morbi ante massa, volutpat et gravida eget, viverra sed dui. Sed accumsan neque et purus eleifend, sed interdum justo pulvinar. Ut sed eleifend arcu. Sed vestibulum justo eu ante varius faucibus. Donec non convallis nibh.</p>
-       
-       <p> Phasellus vulputate vitae urna ut sollicitudin. Quisque dictum libero et diam fermentum, ac congue ligula efficitur. Proin semper euismod volutpat. Sed sed gravida felis, in condimentum justo. Suspendisse potenti. Quisque vulputate urna sed mi hendrerit, eu gravida nibh condimentum. In iaculis massa nibh, quis fermentum augue lobortis quis. Vivamus vitae ligula a nulla commodo semper sed facilisis odio.
-        Cras ac odio tortor. In hac habitasse platea dictumst. Quisque lectus leo, laoreet id rhoncus id, vehicula porta turpis. Mauris eu orci tellus. Maecenas ut elit eget nisl tempus cursus. Fusce arcu quam, ultricies ut magna id, sagittis maximus est. Donec hendrerit luctus urna at finibus. Nam est metus, posuere a orci ut, blandit pretium risus.
-       </p>
+        <p>Etiam pulvinar, quam in iaculis viverra, nibh leo tempor sem, vitae bibendum quam neque vel magna. Nunc id maximus elit. Etiam fermentum tristique lacus eu pulvinar. Vivamus scelerisque varius sem. Aliquam sem ante, pretium eget congue a, vehicula ut ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi nec tincidunt odio. Integer vehicula efficitur nisi sed aliquet. Aliquam aliquam finibus placerat. Mauris consectetur, mauris nec hendrerit efficitur, justo augue placerat odio, a condimentum ante metus et elit. Etiam non massa dui. In vitae tortor sed leo egestas posuere non id tortor. Quisque nec gravida dui. Sed vitae massa mollis, porta felis sed, fringilla odio.</p>
 
-       <p> Nam eu augue libero. Quisque sed leo rutrum lectus imperdiet ornare. Aliquam nec lacus quis diam consectetur gravida vel non lacus. Suspendisse dui sem, consectetur eget erat egestas, volutpat pretium quam. Morbi tellus dui, iaculis eget suscipit in, lobortis vel urna. Fusce sem mi, lobortis sit amet lacinia eget, congue a orci. Nam dolor enim, scelerisque vitae massa eu, facilisis feugiat sem. Phasellus vehicula, nisl a aliquet vulputate, tellus purus rhoncus erat, at mattis tellus nunc vitae mi. Maecenas in eros in lectus fringilla euismod in pharetra purus. Proin molestie quam sit amet nisl euismod, sit amet faucibus diam auctor. </p>
+        <p> Pellentesque lacus orci, mattis cursus est in, finibus sagittis mi. Sed iaculis elit et porta luctus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas lacinia est vitae eros posuere, non commodo justo viverra. Sed finibus id elit sit amet egestas. Nullam ac urna odio. Fusce vestibulum venenatis quam in scelerisque. Maecenas ultricies ultricies velit, non suscipit enim. Vivamus massa velit, lobortis fringilla laoreet in, suscipit vitae velit. Etiam at orci euismod magna rhoncus luctus. Curabitur viverra est ut elit gravida rutrum. Nullam eget viverra enim. Quisque vitae varius urna.</p>
+
+        <p>Maecenas commodo erat ac elit elementum, ac eleifend arcu gravida. Donec commodo auctor augue, eget tempor dui fermentum in. Duis non enim vitae metus accumsan vehicula. Pellentesque egestas diam ut ante aliquet, sit amet fringilla odio interdum. In nec odio nec turpis faucibus sagittis. Sed quis tellus nec ante luctus aliquam sit amet vel mauris. Nunc vitae facilisis mauris, posuere tristique arcu. Praesent nisi urna, venenatis non laoreet a, laoreet malesuada turpis. Donec tempor, nisl et rhoncus viverra, turpis enim convallis ligula, non hendrerit nulla tortor nec odio. Morbi non mattis nunc, elementum auctor arcu. Aliquam vestibulum arcu non sem porta auctor. Nam vel congue ligula, eu condimentum felis. Nunc aliquam hendrerit odio sit amet venenatis. Nunc varius, libero a tempor rutrum, nulla risus congue velit, nec suscipit nibh lectus ac dolor. Nulla facilisi.</p>
     </main>
 
     <footer class="footer">
@@ -53,11 +52,13 @@
                 </a>
 
                 <nav class="navegacion">
-                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a><a href="cursos.html" class="navegacion__enlace">Cursos</a><a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
-            </div> <!-- .barra -->
+            </div>
         </div>
     </footer>
-
+    <script src="js/modernizr.js"></script>
 </body>
 </html>
