--- a/nosotros.html
+++ b/nosotros.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
     <header class="header">
+
         <div class="contenedor">
             <div class="barra">
                 <a class="logo" href="index.html">
@@ -19,32 +19,33 @@
                 </a>
 
                 <nav class="navegacion">
-                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a><a href="cursos.html" class="navegacion__enlace">Cursos</a><a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
-            </div> <!-- .barra -->
-        </div> <!-- .contenedor -->
-
+            </div>
+        </div>
 
         <div class="header__texto">
             <h2 class="no-margin">Blog de café con consejos y cursos</h2>
-            <a class="no-margin">Aprende de los expertos con las mejores recetas y consejos</a>
-        </div> <!-- .header__texto -->
-    </header> <!-- .header -->
-    
-    <main class="contenedor">
-       <h3 class="centrar-texto">Sobre Nosotros</h3>
+            <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
+        </div>
+    </header>
 
-       <div class="sobre-nosotros">
+    <main class="contenedor">
+        <h3 class="centrar-texto">Sobre Nosotros</h3>
+
+        <div class="sobre-nosotros">
             <div class="sobre-nosotros__imagen">
                 <img src="img/nosotros.jpg" alt="imagen nosotros">
             </div>
 
             <div class="sobre-nosotros__texto">
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales, quam ac hendrerit auctor, neque odio varius ante, vitae efficitur eros purus quis urna. Etiam vestibulum pretium iaculis. Etiam varius convallis libero nec finibus. Curabitur malesuada massa erat, ac vestibulum enim sodales ut. Fusce imperdiet in est quis ultrices. Nunc dignissim tincidunt pulvinar. </p>
+                <p>Pellentesque lacus orci, mattis cursus est in, finibus sagittis mi. Sed iaculis elit et porta luctus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas lacinia est vitae eros posuere, non commodo justo viverra. Sed finibus id elit sit amet egestas. Nullam ac urna odio. Fusce vestibulum venenatis quam in scelerisque. Maecenas ultricies ultricies velit, non suscipit enim. .</p>
 
-                <p> Donec finibus justo ac tellus malesuada molestie. Ut porttitor fringilla diam, eget porta quam tempor et. Sed dapibus augue a augue aliquet, vitae dignissim ex efficitur. Donec semper convallis turpis, non pharetra libero efficitur sed. Donec faucibus ac ex in rhoncus. Ut posuere egestas diam, nec pharetra diam sodales at. Donec eu mauris ante. Ut quis aliquam massa. In non magna et risus aliquet luctus. Nullam aliquet sit amet tellus a venenatis. Nullam aliquet sit amet tellus a venenatis. </p>
+                <p>Maecenas commodo erat ac elit elementum, ac eleifend arcu gravida. Donec commodo auctor augue, eget tempor dui fermentum in. Duis non enim vitae metus accumsan vehicula. Pellentesque egestas diam ut ante aliquet, sit amet fringilla odio interdum. In nec odio nec turpis faucibus sagittis. Sed quis tellus nec ante luctus aliquam sit amet vel mauris. Nunc vitae facilisis mauris, posuere tristique arcu. Praesent nisi urna, venenatis non laoreet</p>
             </div>
-       </div>
+        </div>
     </main>
 
     <footer class="footer">
@@ -55,11 +56,14 @@
                 </a>
 
                 <nav class="navegacion">
-                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a><a href="cursos.html" class="navegacion__enlace">Cursos</a><a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
-            </div> <!-- .barra -->
+            </div>
         </div>
     </footer>
-
+    
+    <script src="js/modernizr.js"></script>
 </body>
 </html>
